--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ input[type=text], select, textarea {
   }
 
 
+
     /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
     @media screen and (max-width: 600px) {
         .col-25, .col-75, input[type=submit] {
@@ -263,15 +264,14 @@ input[type=text], select, textarea {
           }
 
           .button {
-            background-color: #52d76d;
-            color: #ffffff;
-            font-size: 1.2rem;
-            font-weight: 700;
-            padding: 5%;
-          }
-
-          .button span, .button span:after, .button:hover span, .button:hover span:after {
-              visibility: hidden;
+              padding: 1vh;
+              margin:1vh;
+              width: 90%;
+              font-size: 2rem;
+              color: #ffffff;
+              border: #ffffff;
+              border-style: groove;
+              background-color: #000000;
           }
     
       }
