--- a/style.css
+++ b/style.css
@@ -121,7 +121,8 @@ hr {
   }
 
   #links img {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px #222);
   }
 
   #links img:hover {
