--- a/style.css
+++ b/style.css
@@ -110,8 +110,9 @@ hr {
 }
 
   #links {
-      padding: 10%;
+    padding: 10%;
     display: flex;
+    margin-top: 10%;
     margin-left: auto;
     margin-right: auto;
     flex-direction: row;
