--- a/style.css
+++ b/style.css
@@ -165,11 +165,6 @@ header#boka {
     line-height: 2vw;}
 
 /******* FORMULÄR ********************/
-  #form {padding-top: 5%;
-    font-size: 1vw;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;}
 
 input[type=text], select, textarea {width: 80%;
     padding: 12px;
@@ -181,9 +176,10 @@ input[type=text], select, textarea {width: 80%;
     display: inline-block;}
   
   input[type=submit] {background-color: #04AA6D;
-    width: 300px;
+    width: 100%;
     color: white;
     margin-top: 5%;
+    margin-bottom: 5%;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
