--- a/style.css
+++ b/style.css
@@ -240,6 +240,12 @@ input[type=text], select, textarea {width: 80%;
     right: 0;}
 
 
+    /****** OM *************/
+
+    #galleri img {
+        width: 100%;
+    }
+
 
     /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
     @media screen and (max-width: 800px) {
