--- a/style.css
+++ b/style.css
@@ -41,10 +41,18 @@ body {
 
 header#index {
     height: 90vh;
-    background-image: url(/img/doncamillo.jpg);
-    background-size: 70%;
+    background-image: url(/img/1x/SVG/SVG/headerigen.png);
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
+}
+
+header#schema {
+  height: 90vh;
+  background-image: url(/img/1x/SVG/SVG/headerigen.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 header img {
@@ -268,6 +276,14 @@ input[type=text], select, textarea {width: 80%;
                 height: 30vh;
                 background-size: cover;
                 background-position: center;
+            }
+
+            header#schema {
+              height: 60vh;
+              background-image: url(/img/1x/SVG/SVG/headerigen.png);
+              background-size: cover;
+              background-repeat: no-repeat;
+              background-position: center;
             }
 
         header#boka  {
